<resources>
    <string name="app_name">Mypetdoc</string>
    <string name="login_hp">Masuk dengan nomor handphone</string>
    <string name="login_google">Masuk dengan google</string>
    <string name="login_fb">Masuk dengan facebook</string>
    <string name="login_email">Masuk dengan email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forget_password">"Forget password"</string>
    <string name="dont_have_account">"Don't have account? sign up"</string>
    <string name="masukan_nomor">"Masukan Nomor Ponsel Anda"</string>
    <string name="ket_nomor">"Pastikan Anda Memasukan Nomor yang Terdaftar"</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="register">Register</string>
    <string name="prompt_repassword">Re-password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_handphone">Handphone</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_notif">Notifications</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_profile">Profile</string>







</resources>