<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradation_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="135dp"
        android:text="@string/login_email"
        android:textColor="@color/colorLoginEmail"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/login_hp"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="376dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:text="@string/login_hp" />

    <Button
        android:id="@+id/login_google"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="297dp"
        android:background="@drawable/custom_button_google"
        android:drawableLeft="@drawable/ic_icons8_googlee"
        android:text="@string/login_google" />

    <TextView
        android:id="@+id/dispTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>