<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandphoneLoginActivity"
    android:background="@drawable/gradation_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="606dp"
        android:text="@string/masukan_nomor"
        android:textColor="@color/putih"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="559dp"
        android:text="@string/ket_nomor"
        android:textColor="@color/putih"
        android:textSize="12dp" />

    <EditText
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="475dp"
        android:shadowColor="@color/putih"
        android:layout_centerHorizontal="true"
        android:selectAllOnFocus="true"
        android:inputType="number"/>

    <Button
        android:layout_width="243dp"
        android:layout_height="38dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="390dp"
        android:background="@drawable/custom_button"
        android:text="@string/verifikasi" />


</RelativeLayout>